[package]
name = "raws"
version = "0.1.0"
authors = ["Justin Lam", "Paolo Napolitano"]
edition = "2018"

[dependencies]
clap = "2.33.0"
rusoto_core = "0.42.0"
rusoto_sqs = "0.42.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
uuid = { version = "0.8.1", features = ["v4"] }
